chore: unit tests and refactoring